added ch1 sidequests
Finished chapter 1 sidequests, added a bunch of the structure of the rest of the game

--- a/_includes/tableofcontents.html
+++ b/_includes/tableofcontents.html
@@ -4,103 +4,31 @@
    <a href="tutorial/" class="tocheading">TUTORIAL</a>
 </li>
 <li><!--PROLOGUE-->
-   <a href="prologue/" class="tocheading">PROLOGUE</a>
-   <ol>
-      <li><a href="prologue/#21">Interrogation, part 1</a></li>
-      <li><a href="prologue/#22">By the King's Will</a></li>
-      <li><a href="prologue/#23">Newboy's Amulet (Melitele's Heart)</a></li>
-      <li><a href="prologue/#24">By the King's Will, Continued</a></li>
-      <li><a href="prologue/#25">At the Fore</a></li>
-      <li><a href="prologue/#26">Interrogation, part 2</a></li>
-      <li><a href="prologue/#27">Aryan La Valette (At the Fore)</a></li>
-      <li><a href="prologue/#28">Interrogation, part 3</a></li>
-      <li><a href="prologue/#29">Trial by Fire</a></li>
-      <li><a href="prologue/#210">Interrogation, part 4</a></li>
-      <li>
-         <a href="prologue/#211">To the Temple</a>
-         <ol>
-            <li><a href="prologue/#2111">Woe Unto the Vanquished</a></li>
-         </ol>
-      </li>
-      <li><a href="prologue/#212">Interrogation, part 5</a></li>
-      <li><a href="prologue/#213">Blood of His Blood</a></li>
-      <li><a href="prologue/#214">Interrogation, part 6</a></li>
-      <li>
-         <a href="prologue/#215">Escaping the Dungeons</a>
-         <ol>
-            <li><a href="prologue/#2151">Aryan La Valette: Alive</a></li>
-            <li><a href="prologue/#2152">Aryan La Valette: Dead</a></li>
-         </ol>
-      </li>
-      <li><a href="prologue/#216">The Riverboat</a></li>
-   </ol>
+   <a href="/prologue/" class="tocheading">PROLOGUE</a>
+   {% include prlg.html %}
 </li>
 <li><!--CHAPTER 1-->
-   <a href="chapter-1/" class="tocheading">CHAPTER I</a>
-   <ol>
-      <li><a href="chapter-1/#31">A Rough Landing</a></li>
-      <li><a href="chapter-1/#32">By the Gods - Stringing Up Sods</a></li>
-      <li><a href="chapter-1/#33">Kayran - A Matter of Price</a></li>
-      <li><a href="chapter-1/#34">Kayran - Cedric and the Shipwreck</a></li>
-      <li><a href="chapter-1/#35">An Indecent Proposal</a></li>
-         <ol><li><a href="chapter-1/#351">The Ballista</a></li></ol>
-      <li>Killing the Kayran</li>
-      <li>Visiting Ciaran</li>
-      <li>The Rose of Remembrance</li>
-      <li>Zoltan the Squirrel</li>
-      <li>Confronting Letho</li>
-      <li>At a Crossroads: Iorveth
-         <ol>
-            <li>The Floating Prison
-         </ol></li>
-      <li>At a Crossroads: Roche
-         <ol>
-            <li>Death to the Traitor!
-         </ol></li>
-      <li>Where is Triss Merigold?
-         <ol><li>Margot's Disappearance</li></ol></li>
-      <li>Character Dialogue</li>
-      <li><a href="chapter-1-sidequests/" class="tocheading">Sidequests</a>
-         <ol>
-            <li><a href="/chapter-1-sidequests/#fightclub">Fight Club</a></li>
-            <li>Hung Over</li>
-            <li>In the Claws of Madness</li>
-            <li>Malena</li>
-            <li>Melitele's Heart</li>
-            <li>Mystic River</li>
-            <li>The Scent of Incense
-               <ol><li>Little Shop of Dreams</li></ol>
-            </li>
-            <li>Troll Trouble [DLC]</li>
-         </ol>
-      </li>
-   </ol>
+   <a href="/chapter-1/" class="tocheading">CHAPTER I</a>
+   {% include ch1_toc.html %}
 </li>
 <li hidden><!--CHAPTER 2 I-->
-   <a href="chapter-2-iorveth/" class="tocheading">CHAPTER II (IORVETH'S PATH)</a>
-   <ol>
-      <li></li>
-   </ol>
+   <a href="/chapter-2-iorveth/" class="tocheading">CHAPTER II (IORVETH'S PATH)</a>
+   {% include ch2i_toc.html %}
 </li>
 <li hidden><!--CHAPTER 2 R-->
-   <a href="chapter-2-roche/" class="tocheading">CHAPTER II (ROCHE'S PATH)</a>
-   <ol>
-      <li></li>
-   </ol>
+   <a href="/chapter-2-roche/" class="tocheading">CHAPTER II (ROCHE'S PATH)</a>
+   {% include ch2r_toc.html %}
 </li>
 <li hidden><!--CHAPTER 3 I-->
-   <a href="chapter-3-iorveth/" class="tocheading">CHAPTER III (IORVETH'S PATH)</a>
-   <ol>
-      <li></li>
-   </ol>
+   <a href="/chapter-3-iorveth/" class="tocheading">CHAPTER III (IORVETH'S PATH)</a>
+   {% include ch3i_toc.html %}
 </li>
 <li hidden><!--CHAPTER 3 R-->
-   <a href="chapter-3-roche/" class="tocheading">CHAPTER III (ROCHE'S PATH)</a>
-   <ol>
-      <li></li>
-   </ol>
+   <a href="/chapter-3-roche/" class="tocheading">CHAPTER III (ROCHE'S PATH)</a>
+   {% include ch3r_toc.html %}
 </li>
 <li hidden><!--EPILOGUE-->
-   <a href="chapter-3-iorveth/" class="tocheading">EPILOGUE</a>
+   <a href="/epilogue/" class="tocheading">EPILOGUE</a>
+   {% include epi_toc.html %}
 </li>
 </ol>
