--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -160,6 +160,10 @@ border-top: 2pt solid #eeebee;
   .tag {
     font-weight: bold !important;
     }
+   .narbreak {
+      margin: 0 !important;
+      font-size: .35em !important;
+   }
 
 a, a:visited {
    text-decoration: none;
@@ -394,6 +398,11 @@ ol {
      .tag {
        font-weight: bold !important;
        }
+      .narbreak {
+      margin: 0 !important;
+      font-size: .35em !important;
+   }
+
 
 #decimalcontents {
        ol {
