--- a/_includes/ch1_toc.html
+++ b/_includes/ch1_toc.html
@@ -5,28 +5,29 @@
    <li><a href="/chapter-1/#34">Kayran - Cedric and the Shipwreck</a></li>
    <li><a href="/chapter-1/#35">An Indecent Proposal</a></li>
       <ol><li><a href="/chapter-1/#351">The Ballista</a></li></ol>
-   <li>Killing the Kayran</li>
-   <li>Visiting Ciaran</li>
-   <li>The Rose of Remembrance</li>
-   <li>Zoltan the Squirrel</li>
-   <li>Confronting Letho</li>
-   <li>Where is Triss Merigold? (Helped Iorveth)</li>
-   <li>Where is Triss Merigold? (Helped Roche)
-         <ol><li>Margot's Disappearance</li></ol>
+   <li><a href="/chapter-1/#36">Killing the Kayran</a></li>
+   <li><a href="/chapter-1/#37">Visiting Ciaran</a></li>
+   <li><a href="/chapter-1/#38">The Rose of Remembrance</a></li>
+   <li><a href="/chapter-1/#39">Zoltan the Squirrel</a></li>
+   <li><a href="/chapter-1/#310">Confronting Letho</a></li>
+   <li><a href="/chapter-1/#311">Where is Triss Merigold? (Helped Iorveth)</a></li>
+   <li><a href="/chapter-1/#312">Where is Triss Merigold? (Helped Roche)</a>
+         <ol><li><a href="/chapter-1/#3121">Margot's Disappearance</a></li></ol>
    </li>
-   <li>Cedric's Death</li>
-   <li>At a Crossroads</li>
-   <li>The Floating Prison (Iorveth)
+   <li><a href="/chapter-1/#313">Cedric's Death</a></li>
+   <li><a href="/chapter-1/#314">At a Crossroads</a>
+      <ol>
+         <li><a href="/chapter-1/#3141">Helped Iorveth in Cáelmewedd</a></li>
+         <li><a href="/chapter-1/#3142">Helped Roche in Cáelmewedd</a></li>
+      </ol>
+   </li>
+   <li><a href="/chapter-1/#315">The Floating Prison (Iorveth)</a>
          <ol>
-            <li>Helped Iorveth in Cáelmewedd</li>
-            <li>Helped Roche in Cáelmewedd</li>
+            <li><a href="/chapter-1/#3151">Helped Iorveth in Cáelmewedd</a></li>
+            <li><a href="/chapter-1/#3152">Helped Roche in Cáelmewedd</a></li>
          </ol>
    </li>
-   <li>Death to the Traitor (Roche)
-      <ol>
-         <li>Helped Iorveth in Cáelmewedd</li>
-         <li>Helped Roche in Cáelmewedd</li>
-      </ol>
+   <li><a href="/chapter-1/#316">Death to the Traitor (Roche)</a>
    </li>
    <li><a class="tocheading" href="/chapter-1-characters/">Character Dialogue</a></li>
    <li hidden><a class="tocheading" href="/chapter-1-overheard/">Overheard Dialogue</a></li>
