search fix maybe

--- a/_includes/ch1_toc.html
+++ b/_includes/ch1_toc.html
@@ -30,7 +30,7 @@
    <li><a href="/chapter-1/#316">Death to the Traitor (Roche)</a>
    </li>
    <li><a class="tocheading" href="/chapter-1-characters/">Character Dialogue</a></li>
-   <li hidden><a class="tocheading" href="/chapter-1-overheard/">Overheard Dialogue</a></li>
+   <li><a class="tocheading" href="/chapter-1-overheard/">Overheard Dialogue</a></li>
    <li><a class="tocheading" href="/chapter-1-sidequests/">Sidequests</a>
       {% include ch1_toc_sq.html %}
    </li>
