finished chapter 2 (roche)

--- a/_includes/ch1_toc_sq.html
+++ b/_includes/ch1_toc_sq.html
@@ -9,4 +9,5 @@
       <ol><li><a href="/chapter-1-sidequests/#dreams">Little Shop of Dreams</a></li></ol>
    </li>
    <li><a href="/chapter-1-sidequests/#troll">Troll Trouble</a></li>
+   <li><a href="/chapter-1-sidequests/#woetothevanquished">Woe Unto the Vanquished</a></li>
 </ol>
