--- a/_includes/ch2r_toc.html
+++ b/_includes/ch2r_toc.html
@@ -1,13 +1,28 @@
 <ol>
-   <li>Prelude to War: Kaedwen</li>
-   <li>Dethmold's Blood Curse Briefing</li>
-   <li>The Butcher of Cidaris</li>
-   <li>In Cervisia Veritas</li>
-   <li>Lost Lambs at Sabrina's Pyre</li>
-   <li>Visiting the Visionary</li>
-   <li>The Captured Elf</li>
+   <li><a href="/chapter-2-roche/#preludetowar">Prelude to War: Kaedwen</a></li>
+   <li><a href="/chapter-2-roche/#dethmoldbriefing">Dethmold's Blood Curse Briefing</a></li>
+   <li><a href="/chapter-2-roche/#conspiracyinfo">Conspiracy Theory: Information Gathering</a></li>
+   <li><a href="/chapter-2-roche/#butchercidaris">The Butcher of Cidaris</a></li>
+   <li><a href="/chapter-2-roche/#cervisia">In Cervisia Veritas</a></li>
+   <li><a href="/chapter-2-roche/#plottersden">Conspiracy Theory: The Plotters' Den</a></li>
+   <li><a href="/chapter-2-roche/#lostlambs">Lost Lambs at Sabrina's Pyre</a></li>
+   <li><a href="/chapter-2-roche/#capturedelf">The Captured Elf</a></li>
+   <li><a href="/chapter-2-roche/#visionary">Visiting the Visionary</a></li>
+   <li><a href="/chapter-2-roche/#crossingmists">Crossing the Mists: Vergen</a>
+      <ol>
+         <li><a href="/chapter-2-roche/#dunbanner">Death Symbolized: The Dun Banner Standard</a></li>
+         <li><a href="/chapter-2-roche/#sword">Hatred Symbolized: Vandergrift's Sword</a></li>
+         <li><a href="/chapter-2-roche/#spear">The Spear of Destiny</a></li>
+      </ol>
+   </li>
+   <li><a href="/chapter-2-roche/#triss">Where is Triss Merigold?</a></li>
+   <li><a href="/chapter-2-roche/#cursebreak">Breaking Henselt's Curse</a></li>
+   <li><a href="/chapter-2-roche/#assassins">The Assassins of Kings: Serrit and Auckes</a></li>
+   <li><a href="/chapter-2-roche/#eternalbattle">The Eternal Battle</a></li>
+   <li><a href="/chapter-2-roche/#bluestripes">Conspiracy Theory: The Blue Stripes</a></li>
+   <li><a href="/chapter-2-roche/#vergensiege">The Siege of Vergen</a></li>
    <li><a class="tocheading" href="/chapter-2-roche-characters/">Character Dialogue</a></li>
-   <li><a class="tocheading" href="/chapter-2-roche-overheard/">Overheard Dialogue</a></li>
+   <li><a class="tocheading" href="/chapter-2-roche-overheard/" hidden>Overheard Dialogue</a></li>
    <li><a class="tocheading" href="/chapter-2-roche-sidequests/">Sidequests</a>
       {% include ch2r_toc_sq.html %}
    </li>
