--- a/_includes/ch2r_toc_sq.html
+++ b/_includes/ch2r_toc_sq.html
@@ -1,3 +1,8 @@
 <ol>
-   <li>Sidequest</li>
+   <li><a href="/chapter-2-roche-sidequests/#fluff">A Sackful of Fluff</a></li>
+   <li><a href="/chapter-2-roche-sidequests/#bluestripes">Against the Blue Stripes</a></li>
+   <li><a href="/chapter-2-roche-sidequests/#avehenselt">Ave Henselt</a></li>
+   <li><a href="/chapter-2-roche-sidequests/#sisters">Little Sisters</a>
+      <ol><li><a href="/chapter-2-roche-sidequests/#bygone">From a Bygone Era</a></li></ol>
+   </li>
 </ol>
