--- a/_includes/tableofcontents.html
+++ b/_includes/tableofcontents.html
@@ -15,7 +15,7 @@
    <a href="/chapter-2-iorveth/" class="tocheading">CHAPTER II (IORVETH'S PATH)</a>
    {% include ch2i_toc.html %}
 </li>
-<li hidden><!--CHAPTER 2 R-->
+<li><!--CHAPTER 2 R-->
    <a href="/chapter-2-roche/" class="tocheading">CHAPTER II (ROCHE'S PATH)</a>
    {% include ch2r_toc.html %}
 </li>
