--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -148,6 +148,13 @@ border-top: 2pt solid #eeebee;
     padding-left:1em !important;
     text-indent: -1em !important;
     }
+   div .stage {
+      margin-bottom: 1em;
+   }
+   .character {
+      margin-top: 1em;
+   }
+
 
   .dialogue {
     padding-left: 2.5em !important;
