wroooong way to do hidden tags

--- a/_includes/ch2r_toc.html
+++ b/_includes/ch2r_toc.html
@@ -22,7 +22,7 @@
    <li><a href="/chapter-2-roche/#bluestripes">Conspiracy Theory: The Blue Stripes</a></li>
    <li><a href="/chapter-2-roche/#vergensiege">The Siege of Vergen</a></li>
    <li><a class="tocheading" href="/chapter-2-roche-characters/">Character Dialogue</a></li>
-   <li><a class="tocheading" href="/chapter-2-roche-overheard/" hidden>Overheard Dialogue</a></li>
+   <li hidden><a class="tocheading" href="/chapter-2-roche-overheard/">Overheard Dialogue</a></li>
    <li><a class="tocheading" href="/chapter-2-roche-sidequests/">Sidequests</a>
       {% include ch2r_toc_sq.html %}
    </li>
