added parts of 3R, Letho convo
added parts of 3R, made final Letho convo public, minor edits to previous chapters

--- a/_includes/ch3r_toc.html
+++ b/_includes/ch3r_toc.html
@@ -1,8 +1,20 @@
 <ol>
-   <li>Assassins of Kings</li>
-   <li><a class="tocheading" href="/chapter-3-roche-characters/">Character Dialogue</a></li>
-   <li><a class="tocheading" href="/chapter-3-roche-overheard/">Overheard Dialogue</a></li>
-   <li><a class="tocheading" href="/chapter-3-roche-sidequests/">Sidequests</a>
+   <li><a href="/chapter-3-roche/#fortemeria">For Temeria</a></li>
+   <li><a href="/chapter-3-roche/#crownwitness">Crown Witness</a></li>
+   <li><a href="/chapter-3-roche/#lilieskimbolt">Lilies and Vipers: Baron Kimbolt</a></li>
+      <ol>
+         <li><a href="/chapter-3-roche/#themessenger">The Messenger</a></li>
+      </ol>
+   <li><a href="/chapter-3-roche/#pactasuntservanda">Pacta Sunt Servanda</a></li>
+   <li><a href="/chapter-3-roche/#liliesnatalis">Lilies and Vipers: Natalis' Judgment</a></li>
+   <li><a href="/chapter-3-roche/#whereistriss">Where is Triss Merigold?</a></li>
+   <li hidden>a href="/chapter-3-roche/#bloodandbone">Of His Blood and Bone</a></li>
+   <li hidden><a href="/chapter-3-roche/#summittriss">A Summit of Mages (Triss)</a></li>
+   <li hidden><a href="/chapter-3-roche/#summitroche">A Summit of Mages (Roche)</a></li>
+   <li hidden><a href="/chapter-3-roche/#enterthedragon">Enter the Dragon</a></li>
+   <li hidden><a class="tocheading" href="/chapter-3-roche-characters/">Character Dialogue</a></li>
+   <li hidden><a class="tocheading" href="/chapter-3-roche-overheard/">Overheard Dialogue</a></li>
+   <li hidden><a class="tocheading" href="/chapter-3-roche-sidequests/">Sidequests</a>
       {% include ch3r_toc_sq.html %}
    </li>
 </ol>
