--- a/_includes/tableofcontents.html
+++ b/_includes/tableofcontents.html
@@ -23,7 +23,7 @@
    <a href="/chapter-3-iorveth/" class="tocheading">CHAPTER III (IORVETH'S PATH)</a>
    {% include ch3i_toc.html %}
 </li>
-<li hidden><!--CHAPTER 3 R-->
+<li><!--CHAPTER 3 R-->
    <a href="/chapter-3-roche/" class="tocheading">CHAPTER III (ROCHE'S PATH)</a>
    {% include ch3r_toc.html %}
 </li>
