--- a/_includes/ch3r_toc.html
+++ b/_includes/ch3r_toc.html
@@ -8,10 +8,10 @@
    <li><a href="/chapter-3-roche/#pactasuntservanda">Pacta Sunt Servanda</a></li>
    <li><a href="/chapter-3-roche/#liliesnatalis">Lilies and Vipers: Natalis' Judgment</a></li>
    <li><a href="/chapter-3-roche/#whereistriss">Where is Triss Merigold?</a></li>
-   <li hidden>a href="/chapter-3-roche/#bloodandbone">Of His Blood and Bone</a></li>
-   <li hidden><a href="/chapter-3-roche/#summittriss">A Summit of Mages (Triss)</a></li>
-   <li hidden><a href="/chapter-3-roche/#summitroche">A Summit of Mages (Roche)</a></li>
-   <li hidden><a href="/chapter-3-roche/#enterthedragon">Enter the Dragon</a></li>
+   <li><a href="/chapter-3-roche/#bloodandbone">Of His Blood and Bone</a></li>
+   <li><a href="/chapter-3-roche/#summittriss">A Summit of Mages (Triss)</a></li>
+   <li><a href="/chapter-3-roche/#summitroche">A Summit of Mages (Roche)</a></li>
+   <li><a href="/chapter-3-roche/#enterthedragon">Enter the Dragon</a></li>
    <li hidden><a class="tocheading" href="/chapter-3-roche-characters/">Character Dialogue</a></li>
    <li hidden><a class="tocheading" href="/chapter-3-roche-overheard/">Overheard Dialogue</a></li>
    <li hidden><a class="tocheading" href="/chapter-3-roche-sidequests/">Sidequests</a>
