--- a/_includes/tableofcontents.html
+++ b/_includes/tableofcontents.html
@@ -27,8 +27,12 @@
    <a href="/chapter-3-roche/" class="tocheading">CHAPTER III (ROCHE'S PATH)</a>
    {% include ch3r_toc.html %}
 </li>
-<li hidden><!--EPILOGUE-->
-   <a href="/epilogue/" class="tocheading">EPILOGUE</a>
-   {% include epi_toc.html %}
+<li hidden><!--EPILOGUE IORVETH-->
+   <a href="/epilogue-iorveth/" class="tocheading">EPILOGUE (IORVETH'S PATH)</a>
+   {% include epii_toc.html %}
+</li>
+<li><!--EPILOGUE ROCHE-->
+   <a href="/epilogue-roche/" class="tocheading">EPILOGUE (ROCHE'S PATH)</a>
+   {% include epir_toc.html %}
 </li>
 </ol>
