--- a/_includes/tableofcontents.html
+++ b/_includes/tableofcontents.html
@@ -33,6 +33,6 @@
 </li>
 <li><!--EPILOGUE ROCHE-->
    <a href="/epilogue-roche/" class="tocheading">EPILOGUE (ROCHE'S PATH)</a>
-   {% include epir_toc.html %}
+   {% include epi_toc.html %}
 </li>
 </ol>
