--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 @import "tableofcontents.scss";
 
 body {
-   font-family: "Open Sans", Roboto, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif;
+   font-family: Roboto, "Open Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif;
 }
 
 @media (min-width: 31.25rem) {
@@ -40,6 +40,7 @@ header {
 
 .main-content h1:first-of-type {
    margin: 0;
+   font-weight:900;
 }
 
 .main-content a {
@@ -139,7 +140,7 @@ border-top: 2pt solid #eeebee;
     text-indent: 0 !important;
     margin-bottom: .8em !important;
     margin-top: 0 !important;
-    font-weight: 600 !important;
+    font-weight: 500 !important;
     }
   .choice span {
      border-bottom: 0.1em solid !important;
@@ -388,7 +389,7 @@ ol {
        text-indent: 0 !important;
        margin-bottom: .8em !important;
        margin-top: 0 !important;
-       font-weight: 600 !important;
+       font-weight: 500 !important;
        }
      .choice span {
         border-bottom: 0.1em solid !important;
