epilogue iorveth headers

--- a/_includes/epi_toc.html
+++ b/_includes/epi_toc.html
@@ -1,9 +1,14 @@
 <ol>
-   <li><a href="/epilogue/#iorveth">Iorveth's Path</a></li>
+   <li><a href="/epilogue/#iorveth">Iorveth's Path</a>
+      <ol>
+         <li><a href="/epilogue/#helpediorveth">Helped Iorveth</a></li>
+         <li><a href="/epilogue/#helpedtrissi">Rescued Triss</a></li>
+      </ol>
+   </li>
    <li><a href="/epilogue/#roche">Roche's Path</a>
       <ol>
          <li><a href="/epilogue/#helpedroche">Helped Roche</a></li>
-         <li><a href="/epilogue/#helpedtriss">Rescued Triss</a></li>
+         <li><a href="/epilogue/#helpedtrissr">Rescued Triss</a></li>
       </ol>
    </li>
    <li><a href="/epilogue/#meetingletho">Meeting Letho</a></li>
