Finished CH2 (Iorveth)

--- a/_includes/ch3i_toc.html
+++ b/_includes/ch3i_toc.html
@@ -1,5 +1,9 @@
 <ol>
-   <li>Assassins of Kings</li>
+   <li>For a Higher Cause</li>
+   <li>Where is Triss Merigold?</li>
+   <li>The Spellbreaker</li>
+   <li>A Summit of Mages</li>
+   <li>Enter the Dragon</li>
    <li><a class="tocheading" href="/chapter-3-iorveth-characters/">Character Dialogue</a></li>
    <li><a class="tocheading" href="/chapter-3-iorveth-overheard/">Overheard Dialogue</a></li>
    <li><a class="tocheading" href="/chapter-3-iorveth-sidequests/">Sidequests</a>
