--- a/_includes/tableofcontents.html
+++ b/_includes/tableofcontents.html
@@ -11,7 +11,7 @@
    <a href="/chapter-1/" class="tocheading">CHAPTER I</a>
    {% include ch1_toc.html %}
 </li>
-<li hidden><!--CHAPTER 2 I-->
+<li><!--CHAPTER 2 I-->
    <a href="/chapter-2-iorveth/" class="tocheading">CHAPTER II (IORVETH'S PATH)</a>
    {% include ch2i_toc.html %}
 </li>
@@ -27,12 +27,8 @@
    <a href="/chapter-3-roche/" class="tocheading">CHAPTER III (ROCHE'S PATH)</a>
    {% include ch3r_toc.html %}
 </li>
-<li hidden><!--EPILOGUE IORVETH-->
-   <a href="/epilogue-iorveth/" class="tocheading">EPILOGUE (IORVETH'S PATH)</a>
-   {% include epii_toc.html %}
-</li>
-<li><!--EPILOGUE ROCHE-->
-   <a href="/epilogue-roche/" class="tocheading">EPILOGUE (ROCHE'S PATH)</a>
+<li><!--EPILOGUE-->
+   <a href="/epilogue/" class="tocheading">EPILOGUE</a>
    {% include epi_toc.html %}
 </li>
 </ol>
