--- a/_includes/ch2i_toc_sq.html
+++ b/_includes/ch2i_toc_sq.html
@@ -1,3 +1,4 @@
 <ol>
-   <li>Sidequest</li>
+   <li><a href="/chapter-2-iorveth-sidequests/#fluff">A Sackful of Fluff</a></li>
+   <li><a href="/chapter-2-iorveth-sidequests/#flicker">With Flickering Heart</a></li>
 </ol>
