aaaand fixed the anchor links in ch2i's table of contents

--- a/_includes/ch2i_toc.html
+++ b/_includes/ch2i_toc.html
@@ -1,22 +1,22 @@
 <ol>
-   <li><a href="chapter-2-iorveth/#preludetowar">Prelude to War: Aedirn</a></li>
-   <li><a href="chapter-2-iorveth/#warcouncil">The War Council</a></li>
-   <li><a href="chapter-2-iorveth/#huntingmagic">Hunting Magic</a></li>
-   <li><a href="chapter-2-iorveth/#subterranean">Subterranean Life</a></li>
-   <li><a href="chapter-2-iorveth/#stennis">Royal Blood: Stennis' Refusal</a></li>
-   <li><a href="chapter-2-iorveth/#symbols">Symbols of the Battle</a></li>
-   <li><a href="chapter-2-iorveth/#dunbanner">Death Symbolized</a></li>
-   <li><a href="chapter-2-iorveth/#trolls">Where is Triss Merigold: The Trolls</a></li>
-   <li><a href="chapter-2-iorveth/#mob">Royal Blood: The Mob</a>
+   <li><a href="/chapter-2-iorveth/#preludetowar">Prelude to War: Aedirn</a></li>
+   <li><a href="/chapter-2-iorveth/#warcouncil">The War Council</a></li>
+   <li><a href="/chapter-2-iorveth/#huntingmagic">Hunting Magic</a></li>
+   <li><a href="/chapter-2-iorveth/#subterranean">Subterranean Life</a></li>
+   <li><a href="/chapter-2-iorveth/#stennis">Royal Blood: Stennis' Refusal</a></li>
+   <li><a href="/chapter-2-iorveth/#symbols">Symbols of the Battle</a></li>
+   <li><a href="/chapter-2-iorveth/#dunbanner">Death Symbolized</a></li>
+   <li><a href="/chapter-2-iorveth/#trolls">Where is Triss Merigold: The Trolls</a></li>
+   <li><a href="/chapter-2-iorveth/#mob">Royal Blood: The Mob</a>
       <ol>
-         <li><a href="chapter-2-iorveth/#walls">The Walls Have Ears</a></li>
-         <li><a href="chapter-2-iorveth/#thorak">Suspect: Thorak</a></li>
+         <li><a href="/chapter-2-iorveth/#walls">The Walls Have Ears</a></li>
+         <li><a href="/chapter-2-iorveth/#thorak">Suspect: Thorak</a></li>
       </ol>
    </li>
-   <li><a href="chapter-2-iorveth/#mists">Where is Triss Merigold: Across the Mists</a></li>
-   <li><a href="chapter-2-iorveth/#lifeanddeath">A Matter of Life and Death</a></li>
-   <li><a href="chapter-2-iorveth/#eternalbattle">The Eternal Battle</a></li>
-   <li><a href="chapter-2-iorveth/#siege">Vergen Besieged</a></li>
+   <li><a href="/chapter-2-iorveth/#mists">Where is Triss Merigold: Across the Mists</a></li>
+   <li><a href="/chapter-2-iorveth/#lifeanddeath">A Matter of Life and Death</a></li>
+   <li><a href="/chapter-2-iorveth/#eternalbattle">The Eternal Battle</a></li>
+   <li><a href="/chapter-2-iorveth/#siege">Vergen Besieged</a></li>
    <li><a class="tocheading" href="/chapter-2-iorveth-characters/">Character Dialogue</a></li>
    <li hidden><a class="tocheading" href="/chapter-2-iorveth-overheard/">Overheard Dialogue</a></li>
    <li><a class="tocheading" href="/chapter-2-iorveth-sidequests/">Sidequests</a>
